--- a/HotelInfo/Info.plist
+++ b/HotelInfo/Info.plist
@@ -15,11 +15,33 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb609230750700996</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>609230750700996</string>
+	<key>FacebookClientToken</key>
+	<string>75e251e217bc6aedeca5d72b84781d6c</string>
+	<key>FacebookDisplayName</key>
+	<string>Hotel Info</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
 </dict>
 </plist>
